--- a/index.html
+++ b/index.html
@@ -2,49 +2,19 @@
 layout: default
 section_id: home
 slides:
-  - bg: images/@stock/slide-2.jpg
+  - bg: images/hero-1.jpg
     title:
-      text: Wrap is a creative theme for many purposes
+      text: Hi there! I'm your Chief Mustache Officer.
       animation: bottom-to-top
       class: large-8 medium-11
     buttons:
       animation: bottom-to-top
       class: medium-12
       items:
-        - text: Purchase Now
-          url: http://themeforest.net/user/honryou/portfolio?ref=honryou
+        - text: Let's chat
+          url: mailto:hi@chiefmustacheofficer.com
           class: boxed
-  - bg: images/@stock/slide-3.jpg
-    title:
-      text: It is simple but powerful
-      animation: bottom-to-top
-      class: large-7 large-offset-5 medium-9 medium-offset-3
-    buttons:
-      animation: bottom-to-top
-      class: large-7 large-offset-5 medium-9 medium-offset-3
-      items:
-        - text: Purchase Now
-          url: http://themeforest.net/user/honryou/portfolio?ref=honryou
-          class: boxed
-  - bg: images/@stock/slide-6.jpg
-    buttons:
-      animation: bottom-to-top slow
-      class: large-12
-      items:
-        - text: View Features
-          url: http://themeforest.net/user/honryou/portfolio?ref=honryou
-          class: boxed
-        - text: Purchase Now
-          url: http://themeforest.net/user/honryou/portfolio?ref=honryou
-    infos:
-      - text: "&nbsp;Creative and responsive design"
-        animation: bottom-to-top
-      - text: "&nbsp;Many helpful shortcodes"
-        animation: bottom-to-top
-      - text: "&nbsp;Simple but powerful theme options"
-        animation: bottom-to-top
-      - text: "&nbsp;Fully responsive"
-        animation: bottom-to-top
+
 boxes:
   - icon_class: fa fa-trophy
     title: Design
@@ -103,12 +73,12 @@ clients:
 
 <div class='advanced mod modDefaultSlider'>
   <div class='sequence' data-autostop='on' data-timeout='0'>
-    <a class='sequence-prev' href='javascript:void(0);'>
+ <!--   <a class='sequence-prev' href='javascript:void(0);'>
       <span></span>
     </a>
     <a class='sequence-next' href='javascript:void(0);'>
       <span></span>
-    </a>
+    </a> !-->
     <ul class='sequence-pagination'>
       {% for slide in page.slides %}
         {% if forloop.index == 1 %}
@@ -165,11 +135,18 @@ clients:
 </div>
 <div class='full'>
   <div class='row'>
-    <div class='large-12 columns'>
-      <h4 style='color: #999'>Our history</h4>
-      <h2>This is some text about your team</h2>
+    <div class='large-6 columns'>
+      <h2>I "mustache" you a question</h2>
       <div class='spacing'></div>
-      <p>This is the text about your Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing.</p>
+      <p class='intro'>What's the problem that challenges your business? What could your business do if you boosted your ROI and decreased your cost of acquisition? There's an answer to those questions, and I can help you find it. Here's the kind of things I specialize in:</p>
+    </div>
+        <div class='large-2 columns'>
+      <div class='spacing'></div>
+    </div>
+    <div class='large-3 columns'>
+      <img src="/images/ChiefMustacheOfficer_Logo.png">
+    </div>
+        <div class='large-1 columns'>
     </div>
   </div>
   <div class='three spacing'></div>
