--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@ slides:
           class: boxed
 
 boxes:
-  - icon_class: fa fa-trophy
-    title: Design
-    text:
-      Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus. temporibus corporis eos dolore reprehenderit ipsa at neque ab ut porro perferendis ex nihilillum ad adipisci saepe dolores cumque fugit nihil minus.
-  - icon_class: fa fa-compass
-    title: Art direction
-    text:
-      Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus. temporibus corporis eos dolore reprehenderit ipsa at neque ab ut porro perferendis ex nihilillum ad adipisci saepe dolores cumque fugit nihil minus.
-  - icon_class: fa fa-star-half-empty
+  - icon_class: fa fa-magic
     title: Branding
     text:
-      Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus. temporibus corporis eos dolore reprehenderit ipsa at neque ab ut porro perferendis ex nihilillum ad adipisci saepe dolores cumque fugit nihil minus.
-  - icon_class: fa fa-image
-    title: Photography
+      Branding is a lot more than a logo or a color scheme. Brand answers the fundamental question of why you're in business, and nailing branding helps you align your company, your employees, and your customers around core values.
+  - icon_class: fa fa-bar-chart-o
+    title: Growth Hacking
     text:
-      Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus. temporibus corporis eos dolore reprehenderit ipsa at neque ab ut porro perferendis ex nihilillum ad adipisci saepe dolores cumque fugit nihil minus.
-  - icon_class: fa fa-dot-circle-o
-    title: Marketing
+      I've been doing what they now call "Growth Hacking" for 15 years now; I used to call it "Scientific Marketing." I am expert at devising &amp; running tests to discover what marketing channels and tactics work best for your company. I also teach teams how to adopt the growth hacking mindset in their own marketing.
+  - icon_class: fa fa-compass
+    title: Strategy
     text:
-      Placeat vel itaque perspiciatis sed repellat qui nihil recusandae doloremque aperiam necessitatibus aspernatur. illum ad adipisci saepe dolores cumque fugit nihil minus. temporibus corporis eos dolore reprehenderit ipsa at neque ab ut porro perferendis ex nihilillum ad adipisci saepe dolores cumque fugit nihil minus.
+      I love marketing execution and have been making websites and ad campaigns for more than 20 years, but I've also got 15 years of experience in building strategy for companies, ranging from marketing strategy, revenue optimization, creating go to market plans, and more. 
+  - icon_class: fa fa-users
+    title: Leadership
+    text:
+      A leader is a servant for their people. Recruiting, training, motivating, and empowering team members with 1 year of experience or a decade, a leader works best when he or she creates processes that are flexible enough to leave room for individual creativity while still providing clear and measurable guidance.
+  - icon_class: fa fa-gift
+    title: Fun
+    text:
+      You don't grow a mustache like mine without a healthy appreciation for the silly. In addition to all of the business-centric value I add, I bring a certain irreverence and fun to work. You're at the office 8 hours a day; you might as well have a little fun while you're there. :)
 milestones:
   - from: 0
     to: 69
@@ -51,15 +51,15 @@ milestones:
     title: Articles Published
 
 testimonials:
-  - text: "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est."
-    author: David White
-    position: Designer at Huglab
-  - text: "Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat consectetuer sit amet magna adipiscing."
-    author: David White
-    position: Designer at Huglab
-  - text: "Reprehenderit eos et non et ut eum reprehenderit quis sequi quia vel repellendus id. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est. Velit quit blanditiis dolor quam error eos dolores sequi eaque rerum est."
-    author: David White
-    position: Designer at Huglab
+  - text: "Trevor is an experienced and highly skilled marketer who can build strong teams and lead them to achieve company goals."
+    author: Maria Sergo
+    position: Marketing Specialist at Unito.io
+  - text: "Trevor was a wonderful boss - always willing to pitch in with his creativity and industry know how while at the same time giving me space to do things my way"
+    author: Piotr Szczesniak
+    position: PR Specialist at GOG.com
+  - text: "Trevor was a great mentor, demanding editor, and brought amazing attention to detail and incredible patience [...] He built a team of people driven to ship, create, and achieve."
+    author: Agnieszka Gasiorek
+    position: Head of Marketing at Kontakt.io
 
 clients:
   - images/@stock/client-1.png
@@ -224,8 +224,7 @@ clients:
 </div>
 
 
-
-
+<!--
 <div class='full parallax' style='background: #f5f5f5'>
   <div class='row'>
     {% for milestone in page.milestones %}
@@ -240,6 +239,8 @@ clients:
   </div>
   <div class='four spacing'></div>
 </div>
+!-->
+<!--
 <div class='full no-padding' style='background: #444; color: #fff'>
   <div class='two spacing'></div>
   <div class='mod modCallToAction'>
@@ -254,6 +255,7 @@ clients:
   </div>
   <div class='spacing'></div>
 </div>
+!-->
 <div class='full'>
   <div class='row'>
     <div class='large-12 columns'>
